--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,19 @@ dependencies:
   latlong2: ^0.9.1
   shimmer: ^3.0.0
   flutter_map_marker_popup: ^7.0.0
+  flutter_launcher_icons: ^0.14.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  remove_alpha_ios: true
+  image_path: "assets/ic_launcher.png"
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assets/ic_launcher.png"
 
   flutter_lints: ^4.0.0
   build_runner: ^2.4.13
